--- a/index.html
+++ b/index.html
@@ -5,17 +5,202 @@
 	    <meta name="description" content=""/>
         <meta name="keywords" content=""/>
         <meta name="author" content=""/>
-		<title>Название проекта</title>
+		<title>Правотест</title>
 		<link rel='stylesheet' href='css/normalize.css' type='text/css'>
 		<link rel="stylesheet" href="css/style.css" type="text/css">
         <link rel="icon" type="image/png" href="favicon.png"/>
-
-	<script src="js/modernizr.js"></script>
+        <link href='https://fonts.googleapis.com/css?family=PT+Sans&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
 </head>
 <body>
-	
-<a href="#" class="button">Привет</a>
+	<div class="wrapper">
+<header>
+   <div class="top clearfix">
+    <a href="" class="logo fl-l clearfix">
+    <img src="img/logo.png" alt="" class="fl-l">
+    <p class="logo--name"> 
+   ПРАВОТЕСТ  
+</p>
+    <p class="logo--desc">ЦЕНТР СЕРТИФИКАЦИИ</p>
+    </a>
+    <div class="phone fl-l">8 (812) 313-93-63</div>
+    <div class="right-side fl-r">
+        <p class="city">Санкт-Петербург</p>
+        <p class="mail">spb@pravotest.ru</p>
+        <a href="" class="others">Другие города</a>
+    </div>
+    </div>
+    <div class="bottom-menu">
+        <nav>
+            <ul class="clearfix">
+                <li><a href="#">Поиск по продукции</a></li>
+                <li><a href="#">Услуги</a></li>
+                <li><a href="#" class="active">О компании</a></li>
+                <li><a href="#">Новости</a></li>
+                <li><a href="#">Вопрос - ответ</a></li>
+                <li><a href="#">Контакты</a></li>
+            </ul>
+        </nav>
+    </div>
+</header>
+<main class="pravotest">
+    <div class="block1">
+        <h1>Центр сертификации “Правотест”</h1>
+        <p>Сертификаты, декларации, свидетельства, заключения — все виды нужной
+ разрешительной документации в один клик. <br>
+Надоела бюрократия?  <br>
+У нас всё понятно и просто — вам нужно только оставить заявку 
+и получить долгожданный сертификат.</p>
+        <a href="#" class="btn">Рассчитать стоимость</a>
+    </div>
+    <div class="block2 clearfix">
+        <h2>Мы оформляем - Сертификаты и Декларации</h2>
+        <div class="items">
+        <div class="item fl-l col-3 clearfix">
+            <a href="#"><img src="img/sert-1.png" alt=""></a>
+            <h3>Сертификат и Декларации </h3>
+            <div class="label">от 1 дня</div>
+        </div>
+        <div class="item fl-l col-3 clearfix">
+            <a href="#"><img src="img/gos-reg.png" alt=""></a>
+            <h3>Свидетельство о 
+государственной регистрации</h3>
+            <div class="label">от 20 дней</div>
+        </div>
+        <div class="item fl-l col-3 clearfix">
+            <a href="#"><img src="img/sert-2.png" alt=""></a>
+            <h3>ИСО (ISO), ХАССП (HASSP)</h3>
+            <div class="label">от 1 дня</div>
+        </div>
+        <div class="item fl-l col-3 clearfix">
+            <a href="#"><img src="img/sert-3.png" alt=""></a>
+            <h3>Отказные письма</h3>
+            <div class="label">за 1 час</div>
+        </div>
+        <div class="item fl-l col-3 clearfix">
+            <a href="#"><img src="img/pogarniy-sertifikat.png" alt=""></a>
+            <h3>Пожарный сертификат</h3>
+            <div class="label">от 20 дней</div>
+        </div>
+        <div class="item fl-l col-3 clearfix">
+            <a href="#"><img src="img/teh-usloviya.png" alt=""></a>
+            <h3>Технические условия</h3>
+            <div class="label">от 3 дней</div>
+        </div>
+        </div>
+    </div>
+    <div class="block3 clearfix">
+        <h2>Наши преимущества</h2>
+        <div class="advantages clearfix">
+            <div class="advantages--item fl-l col-3">
+                <p class="advantages--bold">Срочно — наш обычный режим работы 
+</p>
+                <p class="advantages--normal"> Внезапная проверка госорганов? Не беда! С нами вы успеете в срок  </p>
+            </div>
+            <div class="advantages--item fl-l col-3">
+                <p class="advantages--bold">Бесплатная 
+консультация</p>
+                <p class="advantages--normal">Наши эксперты проконсультируют по любому вопросу, связанному с сертификацией </p>
+            </div>
+            <div class="advantages--item fl-l col-3">
+                <p class="advantages--bold">Собственная аккредитованная лаборатория</p>
+                <p class="advantages--normal">Имеем все необходимые разрешительные документы</p>
+            </div>
+        </div>
+    </div>
+    <div class="block4">
+        <h2>Наши специалисты</h2>
+        <div class="slider clearfix">
+            <div class="slide col-3 fl-l">
+                <img src="img/call-1.png" alt="">
+                <div class="name">Гузель</div>
+                <div class="icq">554 554 555</div>
+                <div class="skype">vasya182</div>
+            </div>
+            <div class="slide col-3 fl-l">
+                <img src="img/call-2.png" alt="">
+                <div class="name">Инна</div>
+                <div class="icq">432 234 423</div>
+                <div class="skype">vasya182</div>
+            </div>
+            <div class="slide col-3 fl-l">
+                <img src="img/call-3.png" alt="">
+                <div class="name">Дарья</div>
+                <div class="icq">432 234 423</div>
+                <div class="skype">vasya182</div>
+            </div>
+        </div>
+        <a href="#" class="btn">Позвоните мне</a>
+    </div>
+    <div class="block5">
+        <h2>Нам доверяют:</h2>
+        <div class="partners clearfix">
+        <img src="img/partners.png" alt="">
+         <!--    <a href="#" class="partners--item fl-l col-7"><img src="" alt=""></a>
+            <a href="#" class="partners--item fl-l col-7"><img src="" alt=""></a>
+            <a href="#" class="partners--item fl-l col-7"><img src="" alt=""></a>
+            <a href="#" class="partners--item fl-l col-7"><img src="" alt=""></a>
+            <a href="#" class="partners--item fl-l col-7"><img src="" alt=""></a>
+            <a href="#" class="partners--item fl-l col-7"><img src="" alt=""></a>
+            <a href="#" class="partners--item fl-l col-7"><img src="" alt=""></a>
+            <a href="#" class="partners--item fl-l col-7"><img src="" alt=""></a>
+            <a href="#" class="partners--item fl-l col-7"><img src="" alt=""></a>
+            <a href="#" class="partners--item fl-l col-7"><img src="" alt=""></a>
+            <a href="#" class="partners--item fl-l col-7"><img src="" alt=""></a>
+            <a href="#" class="partners--item fl-l col-7"><img src="" alt=""></a> -->
+            <p>
 
+
+
+Доверьтесь и вы!</p>
+        </div>
+    </div>
+    <div class="block6">
+        <h2>Отзывы</h2>
+        <div class="review clearfix">
+            <div class="review--item col-3 fl-l">
+                <div class="review--heading">ООО «ФАСХИММАШ» </div>
+                <img src="img/ekotehnika.png" alt="">
+                <p class="review--desc">Спасибо за качественную и быструю работу менеджерам Правотеста. Будем и дальше с Вами работать, т.к. в дальнейшем планируем еще поставки продукции. </p>
+            </div>
+            <div class="review--item col-3 fl-l">
+                <div class="review--heading">ООО "КлиматСтиль" </div>
+                  <img src="img/ekotehnika.png" alt="">
+                <p class="review--desc">Обращались за декларацией о соответствии ТР ТС для холодильного оборудования, для оформления которой потребовались и протоколы испытаний. Все бумаги были сделаны качественно и в срок, оговоренный в договоре. Большое спасибо!</p>
+            </div>
+            <div class="review--item col-3 fl-l">
+                <div class="review--heading">ООО "БытГазСервис" </div>
+                    <img src="img/ekotehnika.png" alt="">
+                <p class="review--desc">Работа сделана очень быстро и профессионально!!!
+Самые лучшие рекомендации и огромное спасибо за Ваш труд и взаимопонимание. </p>
+            </div>
+            <a href="#" class="review--all">Все отзывы</a>
+        </div>
+        <a href="#" class="btn">Заказать сертификат</a>
+    </div>
+</main>
+<footer class="clearfix">
+   <div class="col-3 fl-l">
+    <div class="search">Поиск по сайту</div>
+    <div class="copyright">Все права защищены © 2016</div>
+           </div>
+    <div class="footer-navigation">
+
+        <nav>
+            <ul class="clearfix">
+                <li><a href="#">О компании</a></li>
+                <li><a href="#">Декларирование</a></li>
+                <li><a href="#">Контакты</a></li>
+                <li><a href="#">Поиск по продукции</a></li>
+                <li><a href="#">Справочная информация</a></li>
+                <li><a href="#">Консультации</a></li>
+                <li><a href="#">Сертификация</a></li>
+                <li><a href="#">Законодательство</a></li>
+                <li><a href="#">Новости</a></li>
+            </ul>
+        </nav>
+    </div>
+</footer>
+</div>
 
 </body>
 </html>
