--- a/index.html
+++ b/index.html
@@ -227,7 +227,9 @@ $(document).ready(function() {
 </main>
 <footer class="clearfix">
    <div class="col-3 fl-l">
-    <div class="search">Поиск по сайту</div>
+   <form action="">
+    <input class="search" type="text" placeholder="Поиск по сайту">
+    </form>
     <div class="copyright">Все права защищены © 2016</div>
            </div>
     <div class="footer-navigation">
